--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -1,3 +1,28 @@
 .App {
   text-align: center;
 }
+
+.Navbar {
+  height: 30px;
+  margin: 2px 2px 2px 2px;
+  background-color: green;
+}
+
+.FooterStuff {
+  background-color: green;
+  color: white;
+  position: relative;
+  clear: both;
+  height: 35px;
+  margin-bottom: 0;
+}
+
+.Home {
+  background: #e5fce9;
+  height: 600px;
+  margin: 20px;
+}
+
+.HomeText {
+  padding: 20px;
+}
