--- a/src/containers/Crops.css
+++ b/src/containers/Crops.css
@@ -1,12 +1,16 @@
-.SurfboardsContainer {
+.CropsContainer {
   padding: 14px;
+}
+
+.CropsTitle {
+  color: white;
 }
 
 .CropCard {
   float: left;
   margin: 1%;
   background: #e5fce9;
-  width: 30%;
+  width: 31%;
   height: 650px;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
@@ -21,18 +25,15 @@
 } 
 
 .CropForm {
-  padding: 14px;
-  height: 650px;
-  width: 100%;
+  padding: 20px;
+  padding-right: 10px;
+  margin: 50px;
+  height: 600px;
+  width: 80%;
   text-align: left;
   background: #e5fce9;
-  border: 1px darkolivegreen;
-}
-
-.Navbar {
-  height: '200px';
-  margin: '10px 6px 6px 10px';
-  background-color: green;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0,0,0,0.24);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
 
 .CropFormInput {
